fixes description text contrast

--- a/src/indigo/less/outer-pages.less
+++ b/src/indigo/less/outer-pages.less
@@ -499,11 +499,11 @@
 
     &-description {
         display: none;
-        color: #696d6a
+        color: #ddd;
     }
 
     &-link {
-        color: #696d6a;
+        color: #ddd;
         margin-left: 4px;
     }
 
